Changed page change  aniamtion so theres no overflow issue

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,4 +1,4 @@
-#contact{
+#contact header, #contact section{
     margin: 1rem 7vw;
     max-width: 80vw;
     overflow-wrap: break-word;
