--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -40,7 +40,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     overflow: hidden;
     z-index: 2;
@@ -288,7 +288,7 @@
 @media (max-width: 768px){
 
     #projects .hello-kooky{
-        margin: 10px 5vw;
+        margin: 20px 5vw;
     }
 
     .project{
