--- a/src/styles/pageAnimation.css
+++ b/src/styles/pageAnimation.css
@@ -5,15 +5,17 @@
     z-index: 100;
     background-color: var(--red);
     top: 0;
+    left: 0;
 }
 
 #about-cover{
     height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     z-index: 100;
     background-color: var(--blue);
     top: 0;
+    left: 0;
 }
 
 #contact-cover{
@@ -23,6 +25,7 @@
     z-index: 100;
     background-color: var(--yellow);
     top: 0;
+    left: 0;
 }
 
 .slide-over{
@@ -32,6 +35,6 @@
 }
 
 @keyframes slide {
-    0% { right: 0vw}
-    100%   { right: -120vw;}   
+    0% { width: 100vw}
+    100%   { width: 0vw}   
 }
