--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,16 +6,13 @@
     --yellow: #F9CD54;
 }
 
-html, body {
-	position:relative;
-	overflow-x:hidden;
-}
-
 body{
     background-color: var(--white);
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    overflow-x: hidden;
+    position: relative;
 }
 
 @font-face {
